[package]
name = "bitcoin-consensus-encoding"
version = "1.0.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "Nick Johnson <nick@yonson.dev>", "Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
homepage = "https://rust-bitcoin.org/"
documentation = "https://docs.rs/bitcoin-consensus-encoding/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "Consensus encoding and decoding"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "no-std"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["api", "tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "internals/std", "hex?/std", "serde?/std"]
alloc = ["internals/alloc", "hex?/alloc", "serde?/alloc"]
serde = ["alloc", "hex", "dep:serde"]

[dependencies]
internals = { package = "bitcoin-internals", path = "../internals", version = "0.6.0" }

hex = { package = "hex-conservative", version = "1.1.0", default-features = false, features = [], optional = true }
serde = { version = "1.0.195", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
hex = { package = "hex-conservative", version = "1.1.0" }
serde_json = "1.0.68"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "encoder"
required-features = ["alloc"]

[lints]
workspace = true

[package.metadata.rbmt.api]
enabled = true
features = [["alloc"]]

[package.metadata.rbmt.test]
examples = ["encoder:alloc"]

[package.metadata.rbmt.prerelease]
enabled = true
