[package]
name = "bitcoin-crypto"
version = "0.0.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Crypto support for the rust-bitcoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "types"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "base58/std", "hashes/std", "hex-unstable/std", "internals/std", "io/std", "network/std", "secp256k1/std"]
rand = ["secp256k1/rand"]
alloc = ["base58/alloc", "hashes/alloc", "hex-unstable/alloc", "internals/alloc", "io/alloc", "network/alloc", "secp256k1/alloc", "serde/alloc"]
serde = ["dep:serde", "hashes/serde", "internals/serde", "secp256k1/serde"]

[dependencies]
arbitrary = { version = "1.4.1", optional = true }
base58 = { package = "base58ck", path = "../base58", version = "0.3.0", default-features = false }
hashes = { package = "bitcoin_hashes", path = "../hashes", version = "0.19.0", default-features = false, features = ["hex"] }
hex-unstable = { package = "hex-conservative", version = "0.3.0", default-features = false }
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0", features = ["hex"] }
io = { package = "bitcoin-io", path = "../io", version = "=0.4.0-rc.0", default-features = false, features = ["hashes"] }
network = { package = "bitcoin-network-kind", path = "../network", version = "0.1.0", default-features = false }
secp256k1 = { version = "0.32.0-beta.2", default-features = false }
serde = { version = "1.0.195", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
