[package]
name = "bitcoin_hashes"
version = "0.21.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
homepage = "https://rust-bitcoin.org"
documentation = "https://docs.rs/bitcoin_hashes/"
description = "Hash functions used by the rust-bitcoin ecosystem"
categories = ["algorithms", "cryptography", "no-std"]
keywords = [ "crypto", "bitcoin", "hash", "digest" ]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["api", "tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hex?/std"]
alloc = ["hex?/alloc"]
serde = ["dep:serde", "hex"]
# Smaller (but slower) implementation of sha256, sha512 and ripemd160
small-hash = []

[dependencies]
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0" }
encoding = { package = "bitcoin-consensus-encoding", version = "1.0.0", default-features = false }

arbitrary = { version = "1.4.1", optional = true}
hex = { package = "hex-conservative", version = "1.1.0", default-features = false, optional = true }
serde = { version = "1.0.195", default-features = false, optional = true }
cpufeatures = { version = "0.2", optional = true }

[dev-dependencies]
serde_test = "1.0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.rbmt.api]
enabled = true
features = [["alloc"]]

[package.metadata.rbmt.test]
exact_features = [
    ["alloc", "serde"],
    ["alloc", "small-hash"],
    ["serde", "small-hash"],
    ["std", "serde"],
    ["std", "small-hash"],
    ["alloc", "serde", "small-hash"],
    ["std", "serde", "small-hash"],
]

[package.metadata.rbmt.lint]
allowed_duplicates = [
    "hex-conservative",
    "bitcoin-units",
    "bitcoin-internals",
]

[package.metadata.rbmt.prerelease]
enabled = true
