[package]
name = "bitcoin_hashes"
# We jumped to `v0.14.100` when doing the MSRV bump to Rust `1.74`
# leaving room for a bunch of secuity releases upto this number if
# needed.
version = "0.14.101"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
documentation = "https://docs.rs/bitcoin_hashes/"
description = "Hash functions used by the rust-bitcoin eccosystem"
categories = ["algorithms"]
keywords = [ "crypto", "bitcoin", "hash", "digest" ]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["api", "tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hex/std", "bitcoin-io/std"]
alloc = ["hex/alloc"]
schemars = ["actual-schemars", "alloc"]
# If you want I/O you must enable either "std" or "io".
io = ["bitcoin-io"]
# Smaller (but slower) implementation of sha256, sha512 and ripemd160
small-hash = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = { package = "hex-conservative", version = "0.2.2", default-features = false }

bitcoin-io = { path = "../io", version = "0.1.100", default-features = false, optional = true }
# Do NOT use this as a feature! Use the `schemars` feature instead.
actual-schemars = { package = "schemars", version = "0.8.3", default-features = false, optional = true }
serde = { version = "1.0.130", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0.19"
serde_json = "1.0.68"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(hashes_fuzz)', 'cfg(rust_v_1_64)' ] }

[package.metadata.rbmt.api]
enabled = true
features = [["alloc"]]

[package.metadata.rbmt.test]
exact_features = [
    ["alloc", "serde"],
    ["alloc", "small-hash"],
    ["serde", "small-hash"],
    ["std", "serde"],
    ["std", "small-hash"],
    ["alloc", "serde", "small-hash"],
    ["std", "serde", "small-hash"],
]
