[package]
name = "bitcoin_hashes"
version = "0.13.1"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
documentation = "https://docs.rs/bitcoin_hashes/"
description = "Hash functions used by the rust-bitcoin eccosystem"
categories = ["algorithms"]
keywords = [ "crypto", "bitcoin", "hash", "digest" ]
readme = "README.md"
edition = "2018"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hex/std"]
alloc = ["hex/alloc"]
serde-std = ["serde/std"]
# Smaller (but slower) implementation of sha256, sha512 and ripemd160
small-hash = []

# The core2 feature was removed in a point release in order to publish an EOL release. The EOL
# release should have been a README change only but core2 has been yanked so we could not publish
# and still have a core2 dependency.
# core2 = ["actual-core2", "hex/core2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = { package = "hex-conservative", version = "0.1.1", default-features = false }

schemars = { version = "0.8.3", optional = true }
# Only enable this if you explicitly do not want to use "std", otherwise enable "serde-std".
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(hashes_fuzz)'] }
