[package]
name = "bitcoin-internals"
version = "0.5.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
homepage = "https://rust-bitcoin.org"
documentation = "https://docs.rs/bitcoin-internals"
description = "Internal types and macros used by rust-bitcoin ecosystem"
categories = ["cryptography::cryptocurrencies", "no-std"]
keywords = ["internal"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["api", "tests", "contrib"]

[features]
default = []
std = ["alloc"]
alloc = []

test-serde = ["serde", "dep:serde_json", "dep:bincode"]

[dependencies]
serde = { version = "1.0.195", default-features = false, optional = true }

# Behind the test-serde feature.
serde_json = { version = "1.0.68", optional = true }
bincode = { version = "1.3.1", optional = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.rbmt.api]
enabled = true
features = [["alloc"]]

[package.metadata.rbmt.test]
exclude_features = ["serde_json", "bincode"]
exact_features = [
    ["alloc", "serde"],
    ["std", "serde"],
]

[package.metadata.rbmt.prerelease]
enabled = true
