[package]
name = "bitcoin-io"
version = "0.2.0"
authors = ["Matt Corallo <birchneutea@mattcorallo.com>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
documentation = "https://docs.rs/bitcoin-io/"
description = "Simple I/O traits for no-std (and std) environments"
categories = ["no-std"]
keywords = [ "io", "no-std" ]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hashes?/std", "internals/std"]
alloc = ["hashes?/alloc", "internals/alloc"]

[dependencies]
internals = { package = "bitcoin-internals", path = "../internals" }
encoding = { package = "bitcoin-consensus-encoding", path = "../consensus_encoding", version = "1.0.0-rc.1", default-features = false }

hashes = { package = "bitcoin_hashes", path = "../hashes", default-features = false, optional = true }

[dev-dependencies]
hashes = { package = "bitcoin_hashes", path = "../hashes", default-features = false, features = ["hex"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny" }
