[package]
name = "bitcoin-network-kind"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Which network we are operating on"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "types"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "internals/std"]
alloc = ["internals/alloc", "serde?/alloc"]

[dependencies]
arbitrary = { version = "1.4.1", optional = true }
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0" }

serde = { version = "1.0.195", default-features = false, features = [ "derive" ], optional = true }

[dev-dependencies]
serde_json = "1.0.68"
serde_test = "1.0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
