[package]
name = "bitcoin-p2p-messages"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Peer-to-peer messages defined by the Bitcoin protocol"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "peer-to-peer"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["hashes/std", "hex/std", "internals/std", "io/std", "units/std", "bitcoin/std"]
arbitrary = ["dep:arbitrary", "bitcoin/arbitrary"]

[dependencies]
bitcoin = { path = "../bitcoin/", default-features = false }
hashes = { package = "bitcoin_hashes", version = "0.18.0", path = "../hashes", default-features = false }
hex = { package = "hex-conservative", version = "0.3.0", default-features = false }
internals = { package = "bitcoin-internals", path = "../internals", default-features = false }
io = { package = "bitcoin-io", path = "../io", default-features = false }
units = { package = "bitcoin-units", path = "../units", version = "1.0.0-rc.2", default-features = false }

arbitrary = { version = "1.4.1", optional = true }

[dev-dependencies]
hex_lit = "0.1.1"

[[example]]
name = "handshake"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
redundant_clone = "warn"
use_self = "warn"
