[package]
name = "bitcoin-p2p-messages"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Peer-to-peer messages defined by the Bitcoin protocol"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "peer-to-peer"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["encoding/std", "hashes/std", "network/std", "hex/std", "internals/std", "io/std", "units/std", "bitcoin/std", "primitives/std"]
arbitrary = ["dep:arbitrary", "bitcoin/arbitrary"]

[dependencies]
bitcoin = { path = "../bitcoin/", default-features = false }
encoding = { package = "bitcoin-consensus-encoding", version = "=1.0.0-rc.3", path = "../consensus_encoding", default-features = false }
hashes = { package = "bitcoin_hashes", version = "0.19.0", path = "../hashes", default-features = false }
network = { package = "bitcoin-network-kind", path = "../network", version = "0.1.0", default-features = false }
primitives = { package = "bitcoin-primitives", path = "../primitives", version = "=1.0.0-rc.2", default-features = false }
hex = { package = "hex-conservative", version = "0.3.2", default-features = false }
internals = { package = "bitcoin-internals", path = "../internals", default-features = false }
io = { package = "bitcoin-io", version = "=0.4.0-rc.0", path = "../io", default-features = false }
units = { package = "bitcoin-units", path = "../units", version = "=1.0.0-rc.4", default-features = false }

arbitrary = { version = "1.4.1", optional = true }

[[example]]
name = "handshake"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
