[package]
name = "bitcoin-p2p-messages"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
homepage = "https://rust-bitcoin.org"
description = "Peer-to-peer messages defined by the Bitcoin protocol"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "peer-to-peer"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["encoding/std", "hashes/std", "network/std", "hex/std", "internals/std", "units/std", "primitives/std"]
arbitrary = ["dep:arbitrary", "primitives/arbitrary"]
serde = ["dep:serde", "hashes/serde"]

[dependencies]
encoding = { package = "bitcoin-consensus-encoding", version = "1.0.0", features = ["alloc"], default-features = false }
hashes = { package = "bitcoin_hashes", version = "0.21.0", path = "../hashes", default-features = false }
network = { package = "bitcoin-network-kind", path = "../network", version = "0.1.0", default-features = false }
primitives = { package = "bitcoin-primitives", path = "../primitives", version = "0.102.0", features = ["hex", "alloc"], default-features = false }
hex = { package = "hex-conservative", version = "1.1.0", default-features = false, features = ["alloc"] }
internals = { package = "bitcoin-internals", path = "../internals", default-features = false }
units = { package = "bitcoin-units", path = "../units", version = "0.4.0", default-features = false }

arbitrary = { version = "1.4.1", optional = true }
serde = { version = "1.0.195", default-features = false, features = ["derive", "alloc"], optional = true }

[[example]]
name = "handshake"
required-features = ["std"]

[[example]]
name = "ping-pong"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.rbmt.test]
exact_features = [
    ["std", "serde"],
]

[package.metadata.rbmt.lint]
allowed_duplicates = [
    "bitcoin-units",
    "bitcoin-internals",
]
